detailed success return info
