# internal/model/tag.go
@@ -1,9 +1,16 @@
 package model
 
+import "github.com/camtrik/gin-blog/pkg/app"
+
 type Tag struct {
 	*Model
 	Name   string `json:"name"`
 	Status uint8  `json:"status"`
+}
+
+type TagSwagger struct {
+	List  []*Tag
+	Pager *app.Pager
 }
 
 func (t Tag) TableName() string {
